--- a/layout/footer.phtml
+++ b/layout/footer.phtml
@@ -9,7 +9,8 @@
   <!-- #page -->
   <script src="<?= get_base_url('assets/js/jquery.js');?>"></script>
   <script src="<?= get_base_url('assets/js/bootstrap.min.js');?>"></script>
-  <script src="<?= get_base_url('assets/js/jquery.autocomplete.min.js');?>"></script>
+  <script src="<?= get_base_url('assets/js/select2-full.min.js');?>"></script>
+  <script src="<?= get_base_url('assets/js/bootstrap3-wysihtml5/bootstrap3-wysihtml5.all.min.js');?>"></script>
   <script src="<?= get_base_url('assets/js/app.js');?>"></script>
 </body>
 </html>
